--- a/Portfolio.html
+++ b/Portfolio.html
@@ -115,7 +115,7 @@
         </header>
         <main>
             <section id = "Home" class = "styles">
-                <img src = "https://github.com/akhil-1066/Portfolio/blob/main/photo.jpg" class = "photo">
+                <img src = "https://akhil-1066.github.io/Portfolio/photo.jpg" class = "photo">
                 <div class = "content">
                     <h1 style = "font-size: 50px;">Rampelli Akhil</h1>
                     <p>+91 7794889640</p>
