--- a/Portfolio.html
+++ b/Portfolio.html
@@ -194,6 +194,15 @@
                     <li>Problem Solving Intermediate - <a href = "https://www.hackerrank.com/certificates/iframe/312a3cf5f168">HACKERRANK</a></li>
                 </ul>
             </section>
+            <section id = "Projects" class = "styles">
+                <h1>PROJECTS</h1>
+                <ul>
+                    <li>"E-COMMERCE WEBSITE" Project in Human Computer Interaction course using HTML, CSS and Java script.</li>
+                    <li>Mirchi Breed Classification Project using Machine Learning Model (CNN).</li>
+                    <li>"CROP MONITORING" Project in Hackathon 2022.</li>
+                    <li>"BUS TICKET MANAGEMENT SYSTEM" Project in C programming.</li>
+                </ul>
+            </section>
         </main>
         <footer>
         </footer>
