--- a/Portfolio.html
+++ b/Portfolio.html
@@ -87,7 +87,7 @@
                 padding-top: 1%;
                 padding-left: 1%;
             }
-            #Skills .skill ol, #Certifications ul{
+            #Skills .skill ol, #Certifications ul, #Projects ul{
                 padding-left: 2%;
             }
             #Achievements ol a, #Certifications ul a{
