--- a/Portfolio.html
+++ b/Portfolio.html
@@ -146,9 +146,8 @@
             <section id = "Achievements" class = "styles">
                 <h1>ACHIEVEMENTS</h1><br>
                 <ol>
-                    <li>Till now I have solved around 300+ problems in LeetCode platform - <a>VERIFY</a></li>
-                    <li>Won 2nd prize in Hackathon conducted by SR University - <a>VERIFY</a></li>
-                    <li>Won 3rd prize in Hackathon conducted by SR University - <a>VERIFY</a></li>
+                    <li>Till now I have solved around 300+ problems in LeetCode platform - <a href = "https://leetcode.com/u/akhilrampelli/">VERIFY</a></li>
+                    <li>Won 3nd prize in Hackathon conducted by SR University - <a href = "https://www.linkedin.com/posts/akhil-rampelli_sru-sruniversity-btech-activity-7154786190821400576-Jf7w?utm_source=share&utm_medium=member_desktop">VERIFY</a></li>
                 </ol>
             </section>
             <section id = "Skills" class = "styles">
