--- a/Portfolio.html
+++ b/Portfolio.html
@@ -186,7 +186,7 @@
                 </div>
             </section>
             <section id = "Certifications" class = "styles">
-                <h1>CERTIFICATIONS</h1>
+                <h1>CERTIFICATIONS</h1><br>
                 <ul>
                     <li>Database Management Course - <a href = "https://nptel.ac.in/noc/E_Certificate/NPTEL23CS79S3573041810024076">NPTEL</a></li>
                     <li>Crash course on Python in AI Automation - <a href = "https://coursera.org/verify/DAQEXPUUKXPX">COURSERA</a></li>
@@ -194,7 +194,7 @@
                 </ul>
             </section>
             <section id = "Projects" class = "styles">
-                <h1>PROJECTS</h1>
+                <h1>PROJECTS</h1><br>
                 <ul>
                     <li>"E-COMMERCE WEBSITE" Project in Human Computer Interaction course using HTML, CSS and Java script. And it is a Frontend Development Project. From this I have gained how to built a web Interface in a attractive manner and Interactive way.</li>
                     <li>Mirchi Breed Classification Project using Machine Learning Model (CNN). This project is trained by using Convolutional Neural Network Machine Learning Model to preprocess the Images, We have researched and collected image dataset.</li>
