--- a/Portfolio.html
+++ b/Portfolio.html
@@ -204,6 +204,10 @@
             </section>
         </main>
         <footer>
+            <div style="text-align:center; padding: 20px; background-color: rgb(168, 177, 202);">
+                <p>&copy; 2024 Rampelli Akhil. All rights reserved.</p>
+                <p>Connect with me: <a href="https://www.linkedin.com/in/akhil-rampelli">LinkedIn</a> | <a href="https://github.com/akhil-1066">GitHub</a></p>
+            </div>
         </footer>
     </body>
 </html>
