--- a/Portfolio.html
+++ b/Portfolio.html
@@ -99,6 +99,9 @@
                 font-size: 12px;
                 background-color: Yellow;
             }
+            footer{
+                margin-top: 10px;
+            }
         </style>
     </head>
     <body>
