--- a/Portfolio.html
+++ b/Portfolio.html
@@ -108,7 +108,7 @@
         <header>
             <h1>PORTFOLIO</h1>
             <nav>
-                <a href = "#Home">HOME</a>
+                <a href = "#Home">PROFILE</a>
                 <a href = "#Education">EDUCATION</a>
                 <a href = "#Achievements">ACHIEVEMENTS</a>
                 <a href = "#Skills">SKILLS</a>
