--- a/Portfolio.html
+++ b/Portfolio.html
@@ -201,8 +201,8 @@
                 <ul>
                     <li>"E-COMMERCE WEBSITE" Project in Human Computer Interaction course using HTML, CSS and Java script. And it is a Frontend Development Project. From this I have gained how to built a web Interface in a attractive manner and Interactive way.</li>
                     <li>Mirchi Breed Classification Project using Machine Learning Model (CNN). This project is trained by using Convolutional Neural Network Machine Learning Model to preprocess the Images, We have researched and collected image dataset.</li>
-                    <li>"CROP MONITORING" Project in Hackathon 2022. This project was team project. In this my role is Frontend Developer and the technologies I have used are HTML, CSS, JavaScript. By presenting this project we got a Appreciation Certification from our University.</li>
-                    <li>"BUS TICKET MANAGEMENT SYSTEM" Project in C programming. This is my first project and I have done this project using C Language with File Management System.</li>
+                    <li>"CROP MONITORING" Project in Hackathon 2022. This project was a team work. In this, my role is Frontend Developer and the technologies I have used are HTML, CSS, JavaScript. By presenting this project we got Certification of Appreciation from our University.</li>
+                    <li>"BUS TICKET MANAGEMENT SYSTEM" Project in C programming. This is my first project and I have done this project using C Language with File Management System. And this is a individual project.</li>
                 </ul>
             </section>
         </main>
