--- a/Portfolio.html
+++ b/Portfolio.html
@@ -346,6 +346,19 @@
                 height: auto;
             }
         }
+	@media only screen and (min-width: 769px) {
+            /* iPad Pro */
+            #Home{
+                border: solid rgba(17, 18, 1, 0.199) 4px;
+                border-radius: 20px;
+                padding: 20px;
+                margin-left: -1%;
+                margin-top: 1%;
+                margin-right: 1%;
+                background-color: rgba(196, 197, 196, 0.258);
+                width: 100%;
+            }
+        }
     </style>
     </head>
     <body>
