--- a/Portfolio.html
+++ b/Portfolio.html
@@ -379,7 +379,7 @@
             </nav>
         </header>
         <main>
-            <section id="Home" class="styles">
+            <section id="Home">
                 <img src="https://akhil-1066.github.io/Portfolio/photo.jpg" class="photo">
                 <div class="content">
                     <h1 class = "name">Rampelli Akhil</h1>
