--- a/Portfolio.html
+++ b/Portfolio.html
@@ -278,7 +278,6 @@
             }
             #links{
                 display: none;
-                padding-left: 1vh;
             }
             header nav a {
                 font-size: 16px;
@@ -380,7 +379,7 @@
         </header>
         <main>
             <section id="Home">
-                <img src="https://akhil-1066.github.io/Portfolio/photo.jpg" class="photo">
+                <img src="https://akhil-1066.github.io/Portfolio/Images/photo.jpg" class="photo">
                 <div class="content">
                     <h1 class = "name">Rampelli Akhil</h1>
                     <p>+91 7794889640</p>
@@ -424,7 +423,7 @@
                 <h1 class = "section-title">PROJECTS</h1>
                 <div class = "grid">
                     <div class = "Project">
-                        <img src = "C:\Users\Akhil\Downloads\Ecommerce.png">
+                        <img src = "https://akhil-1066.github.io/Portfolio/Images/Ecommerce.png">
                         <div class = "Decription">
                             <h3>E-COMMERCE</h3>
                             <h4>Mentor by prof. Ravi Chaytanya</h4>
@@ -466,11 +465,11 @@
                 <h1 class = "section-title">ACHIEVEMENTS</h1><br>
                 <div class = "grid">
                     <div class = "achivement">
-                        <img src = "C:\Users\Akhil\Downloads\Leetcode.png" style = "width: 95%; height: 90%;">
+                        <img src = "https://akhil-1066.github.io/Portfolio/Images/Leetcode.png" style = "width: 95%; height: 90%;">
                         <p>Till now I have solved around 350+ problems in LeetCode platform - <a href="https://leetcode.com/u/akhilrampelli/">VERIFY</a></p>
                     </div>
                     <div class = "achivement">
-                        <img src = "C:\Users\Akhil\Downloads\Hackathon.png" style = "width: 95%; height: 90%;">
+                        <img src = "https://akhil-1066.github.io/Portfolio/Images/Hackathon.png" style = "width: 95%; height: 90%;">
                         <p>Won 3nd prize in Hackathon conducted by SR University - <a href="https://www.linkedin.com/posts/akhil-rampelli_sru-sruniversity-btech-activity-7154786190821400576-Jf7w?utm_source=share&utm_medium=member_desktop">VERIFY</a></p>
                     </div>
                 </div>
@@ -542,15 +541,15 @@
                 <h1 class = "section-title">CERTIFICATIONS</h1>
                 <div class = "grid">
                     <div class = "certificate">
-                        <img src = "C:\Users\Akhil\Downloads\NPTEL.png" style = "width: 95%; height: 90%;">
+                        <img src = "https://akhil-1066.github.io/Portfolio/Images/NPTEL.png" style = "width: 95%; height: 90%;">
                         <p>Database Management Course - <a href="https://nptel.ac.in/noc/E_Certificate/NPTEL23CS79S3573041810024076">NPTEL</a></p>
                     </div>
                     <div class = "certificate">
-                        <img src = "C:\Users\Akhil\Downloads\Coursera.png" style = "width: 95%; height: 90%;">
+                        <img src = "https://akhil-1066.github.io/Portfolio/Images/Coursera.png" style = "width: 95%; height: 90%;">
                         <p>Crash course on Python in AI Automation - <a href="https://coursera.org/verify/DAQEXPUUKXPX">COURSERA</a></p>
                     </div>
                     <div class = "certificate">
-                        <img src = "C:\Users\Akhil\Downloads\Hackerrank.png" style = "width: 95%; height: 90%;">
+                        <img src = "https://akhil-1066.github.io/Portfolio/Images/Hackerrank.png" style = "width: 95%; height: 90%;">
                         <p>Problem Solving Intermediate - <a href="https://www.hackerrank.com/certificates/iframe/312a3cf5f168">HACKERRANK</a></p>
                     </div>
                 </div>
