--- a/Portfolio.html
+++ b/Portfolio.html
@@ -388,7 +388,7 @@
                     <a href="https://leetcode.com/u/akhilrampelli/"><img src="https://cdn.iconscout.com/icon/free/png-256/free-leetcode-logo-icon-download-in-svg-png-gif-file-formats--technology-social-media-vol-4-pack-logos-icons-2944960.png?f=webp" class="logo"></a>
                     <a href="https://github.com/akhil-1066"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" class="logo"></a>
                     <a href="https://github.com/akhil-1066"><img src="https://user-images.githubusercontent.com/17762967/42728663-26ebdb04-87dd-11e8-928f-fb01479a2ce1.png" class="logo"></a>
-		    <a href="https://drive.google.com/file/d/1Cdf77i1N5eWx8zKGDV0tkACj9l32L-Zn/view?usp=sharing"><img src = "https://cdn.dribbble.com/userupload/3715014/file/original-2f279f7f831605ce59aa32220357c4a7.jpg?resize=6667x5000"></a>
+		    <a href="https://drive.google.com/file/d/1Cdf77i1N5eWx8zKGDV0tkACj9l32L-Zn/view?usp=sharing"><img src = "https://cdn.dribbble.com/userupload/3715014/file/original-2f279f7f831605ce59aa32220357c4a7.jpg?resize=6667x5000" class="logo"></a>
                 </div>
             </section>
             <section id="Education" class="styles">
