--- a/Portfolio.html
+++ b/Portfolio.html
@@ -243,6 +243,7 @@
         @media only screen and (max-width: 768px) {
             .Heading{
                 display: flex;
+		padding-top: 1vh;
             }
             .Heading a{
                 display: block;
@@ -262,6 +263,7 @@
                 align-items: flex-start;
                 padding: 8px;
                 position: fixed;
+		height: 2vh;
             }
             header h1 {
                 font-size: 20px;
