--- a/Portfolio.html
+++ b/Portfolio.html
@@ -244,6 +244,7 @@
             .Heading{
                 display: flex;
 		padding-top: 1vh;
+		height: 1.5vh
             }
             .Heading a{
                 display: block;
@@ -263,7 +264,7 @@
                 align-items: flex-start;
                 padding: 8px;
                 position: fixed;
-		height: 10vh;
+		height: auto;
             }
             header h1 {
                 font-size: 20px;
